[metadata]
name = robotframework-weblibrary
author = Subscription QA
author-email = longmazhanfeng@gmail.com
summary = Web testing library for Robot Framework Extended with Selenium2Library
license=Apache License 2.0
description-file =
    README.rst
home-page = https://github.com/Netease-AutoTest/robotframework-weblibrary
requires-python = >=2.7
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7

